Signed-off-by: Dima-Meln <dimamelnichuk11@gmail.com>

--- a/stm32f4/cmsis/CMakeLists.txt
+++ b/stm32f4/cmsis/CMakeLists.txt
@@ -13,14 +13,14 @@ IF(NOT STM32_StdPeriphLib_DIR)
 ENDIF()
 
 INCLUDE_DIRECTORIES(
-    ${STM32_StdPeriphLib_DIR}/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/
-    ${STM32_StdPeriphLib_DIR}/Libraries/CMSIS/CM3/CoreSupport/
+    ${STM32_StdPeriphLib_DIR}Device/ST/STM32F4xx/Include/
+    ${STM32_StdPeriphLib_DIR}/Include/
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 SET(CMSIS_SOURCES
-    ${STM32_StdPeriphLib_DIR}/Device/ST/STM32F4xx/Source/Templates/system_stm32f10x.c
-    ${STM32_StdPeriphLib_DIR}/Include/core_cm4.h
+    ${STM32_StdPeriphLib_DIR}/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
+    #${STM32_StdPeriphLib_DIR}/Include/core_cm4.h
 )
 
 SET(STM32F4_STARTUP ${STM32_StdPeriphLib_DIR}/Device/ST/STM32F4xx/Source/Templates/gcc_ride7/startup_stm32f4xx.s)
@@ -28,6 +28,7 @@ SET(STM32F4_STARTUP ${STM32_StdPeriphLib_DIR}/Device/ST/STM32F4xx/Source/Templat
 ADD_LIBRARY(cmsis_f4 ${CMSIS_SOURCES})
 SET_TARGET_PROPERTIES(cmsis_f4 PROPERTIES COMPILE_DEFINITIONS "STM32F4xx")
 
+#&&&ADD_EXECUTABLE(startup_stm32f4xx.O)
 
 INSTALL(TARGETS cmsis_f4
     RUNTIME DESTINATION bin
@@ -44,8 +45,13 @@ INSTALL(FILES
 )
 
 INSTALL(FILES 
-    ${STM32F4_STARTUP}
     ./stm32f4xx_flash_extsram.ld
     DESTINATION
     ${TOOLCHAIN_PREFIX}/arm-none-eabi/lib/
+)
+
+INSTALL(FILES 
+    ${STM32F4_STARTUP}
+    DESTINATION
+    ${TOOLCHAIN_PREFIX}/arm-none-eabi/src/
 )
