Signed-off-by: Dima-Meln <dimamelnichuk11@gmail.com>

--- a/stm32f4/cmsis/CMakeLists.txt
+++ b/stm32f4/cmsis/CMakeLists.txt
@@ -55,3 +55,9 @@ INSTALL(FILES
     DESTINATION
     ${TOOLCHAIN_PREFIX}/arm-none-eabi/src/
 )
+
+INSTALL(FILES
+	FindSTM32F4_CMSIS.cmake
+	DESTINATION
+	/usr/share/cmake-2.8/Modules/
+)
